Fixed #34982 -- Fixed helptext and password read-only widget alignment in admin pages for tabler screen size.

--- a/django/contrib/admin/static/admin/css/forms.css
+++ b/django/contrib/admin/static/admin/css/forms.css
@@ -24,7 +24,6 @@ form .form-row p {
 
 .flex-container {
     display: flex;
-    flex-wrap: wrap;
 }
 
 .form-multiline > div {
@@ -78,7 +77,7 @@ form ul.inline li {
 .aligned label {
     display: block;
     padding: 4px 10px 0 0;
-    width: 160px;
+    min-width: 160px;
     word-wrap: break-word;
     line-height: 1;
 }
